--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,8 @@
 %%-*- mode: erlang -*-
 %% ex: ft=erlang
-{erl_opts, [{parse_transform, lager_transform}]}.
 {eunit_opts, [{report, {eunit_surefire, [{dir, "."}]}}]}.
 {cover_enabled, true}.
 {ct_use_short_names, true}.
 {deps, [
-    {lager, "2.0.3", {git, "https://github.com/k2informatics/lager.git", {tag, "2.0.3"}}},
-    {erloci, "", {git, "git@github.com:k2informatics/erloci.git", master}}
+    {erloci, "", {git, "https://github.com/k2informatics/erloci.git", master}}
 ]}.
