--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,5 @@
 {cover_enabled, true}.
 {ct_use_short_names, true}.
 {deps, [
-    {erloci, "", {git, "https://github.com/k2informatics/erloci.git", master}}
+    {erloci, "0.0.3", {git, "https://github.com/k2informatics/erloci.git", master}}
 ]}.
