--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,6 @@
 {cover_enabled, true}.
 {ct_use_short_names, true}.
 {deps, [
-    {erloci, "0.0.3", {git, "https://github.com/k2informatics/erloci.git", master}}
+    % Remove/Comment following erloci dependency before using in sbsgui
+    % {erloci, "0.0.3", {git, "https://github.com/k2informatics/erloci.git", master}}
 ]}.
