--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 .eunit
-deps
-*.o
-*.beam
-*.plt
 erl_crash.dump
-ebin
-rel/example_project
-.concrete/DEV_MODE
+_build
 .rebar
 *.swp
-*.txt
+rebar.lock
