--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,26 @@
-%%-*- mode: erlang -*-
-%% ex: ft=erlang
-{eunit_opts, [{report, {eunit_surefire, [{dir, "."}]}}]}.
 {cover_enabled, true}.
-{ct_use_short_names, true}.
+{cover_excl_mods, [filename]}.
+
+{ct_cover, true}.
+{ct_verbose, true}.
+
 {deps, [
-    % Remove/Comment following erloci dependency before using in sbsgui
-    {erloci, "0.0.3pre-5", {git, "https://github.com/k2informatics/erloci.git", {tag, "0.0.3pre-5"}}}
+    {erloci, {git, "https://github.com/k2informatics/erloci.git", {tag, "0.1.0"}}}
 ]}.
+
+{eunit_opts, [
+    {skip_deps, true},
+    verbose
+]}.
+
+{recursive_cmds, [clean, eunit]}.
+
+{xref_checks, [
+    deprecated_functions,
+    deprecated_function_calls,
+    exports_not_used,
+    locals_not_used,
+    undefined_functions,
+    undefined_function_calls
+]}.
+
