--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,5 @@
 {ct_use_short_names, true}.
 {deps, [
     % Remove/Comment following erloci dependency before using in sbsgui
-    {erloci, "0.0.3pre-5", {git, "https://github.com/k2informatics/erloci.git", {tag, "0.0.3pre-5"}}}
+    {erloci, "0.1.1", {git, "https://github.com/k2informatics/erloci.git", {tag, "0.1.1"}}}
 ]}.
