--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,5 @@
 {cover_enabled, true}.
 {ct_use_short_names, true}.
 {deps, [
-    % Remove/Comment following erloci dependency before using in sbsgui
-    {erloci, "0.1.1", {git, "https://github.com/k2informatics/erloci.git", {tag, "0.1.1"}}}
+    {erloci, {git, "https://github.com/k2informatics/erloci.git", {branch, "master"}}}
 ]}.
